2008-11-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Check for xcrypt.h, fix typo in libaudit check.
	* modules/pam_cracklib/pam_cracklib.c: Include xcrypt.h if
	available.
	* modules/pam_unix/bigcrypt.c: Likewise.
	* modules/pam_unix/passverify.c: Likewise.
	* modules/pam_userdb/pam_userdb.c: Likewise.
	Patch from Diego Flameeyes Pettenò <flameeyes@gmail.com>

	* doc/man/pam_getenv.3.xml: Document that application should
	not free return value.

	* doc/man/pam.3.xml: Add Note about thread-safeness of libpam
	functions.

2008-11-28  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/unix_update.c (set_password): Allow root to change
	passwords without verification of the old ones.

	* modules/pam_tally2/pam_tally2.c (tally_check): Fix info format
	to be the same as in pam_tally.

	* configure.in: Add modules/pam_timestamp/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_timestamp.xml.
	* doc/sag/pam_timestamp.xml: New.
	* libpam/pam_static_modules.h: Add pam_timestamp static struct.
	* modules/Makefile.am: Add pam_timestamp directory.
	* modules/pam_timestamp/Makefile.am: New.
	* modules/pam_timestamp/README.xml: New.
	* modules/pam_timestamp/hmacsha1.h: New.
	* modules/pam_timestamp/sha1.h: New.
	* modules/pam_timestamp/pam_timestamp.8.xml: New.
	* modules/pam_timestamp/pam_timestamp_check.8.xml: New.
	* modules/pam_timestamp/pam_timestamp.c: New.
	* modules/pam_timestamp/pam_timestamp_check.c: New.
	* modules/pam_timestamp/hmacfile.c: New.
	* modules/pam_timestamp/hmacsha1.c: New.
	* modules/pam_timestamp/sha1.c: New.
	* modules/pam_timestamp/tst-pam_timestamp: New.
	* po/POTFILES.in: Add pam_timestamp sources.
	* po/*.po: Regenerate.
	* po/cs.po: Updated translations.

2008-11-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_pwhistory/opasswd.c (save_old_password): Fix typo.

	* modules/pam_time/pam_time.c (is_same): Fix check
	of correct string length (debian bug #326407).

2008-11-24  Thorsten Kukuk  <kukuk@thkukuk.de>
